# Game-Engine-Arch

./: CMakeLists.txt  Makefile  README.md  clean  configure  notas.txt  run
include/: Pong.h  game.h  print.h
src/: Pong.cpp  game.cpp  main.cpp
src/ECS/SystemTypes/: EventSystem.h  RenderSystem.h
src/Game/: Game.h
src/Pong/: Components.h  Pong.cpp  Systems.h
src/Scene/: Scene.h
